# LOOKbook

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MILESTONES.md  Modelfile  Modelfile.llama31  Modelfile.qwen2  README.md  RELEASE_NOTES_v0.2.0.md  ROADMAP.md  SECURITY.md  SUPPORT.md  app.js  db.js  package.json  playwright.config.mjs  pyproject.toml  vitest.config.mjs
.github/: PULL_REQUEST_TEMPLATE.md
config/: moneyprinter.toml
demo-lab/: index.html  lab-app.js  theme.css
demo-lab-react/: README.md  index.html  package.json  vite.config.ts
director-graph/: graph.py  graph.spec.json  graph_profiles.json  lookbook_client.py  nodes.py  runner.py  server.py
docs/: API.md  CINEFORGE_BRIDGE.md  DEMO_LAB_GEN2.md  NOTEBOOKLM_TRACKER.md  RIGHTS_AND_SOURCE_POLICY.md  index.html
lookbook/: __init__.py  cli.py  config.py  config.yaml  director_graph_client.py  lab.py  lab_capabilities.py  lab_server.py  models.py  project.py  schemas.py  telemetry.py
routes/: broll.js  collections.js  looks.js
scripts/: director-graph-http-smoke.py  ecc_to_hermes.py  generate_comic_fixture.py  init-moneyprinter.bat  init-moneyprinter.sh  install-demo-lab-fresh.ps1  pipeline-research-story.ps1  pipeline-visual-story.ps1  preflight-demo-lab.ps1  release_check.sh  run_demo_lab.py  start-demo-lab.ps1  start-director-graph.ps1  vault-import-http-smoke.py  vault-pipeline-http-smoke.py
tests/: broll.test.js  conftest.py  e2e_cli.py  e2e_lab_server.py  test_animatic.py  test_archive.py  test_choreography.py  test_cineforge_export.py  (+19 more)
(+72 files in other folders)
