[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lookbook-ai"
version = "0.2.0"
description = "Open-source book-to-animation compiler for scene extraction and true image-to-video handoff."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "lookBOOK contributors"}]
keywords = ["ai-video", "image-to-video", "motion-comic", "books", "comics", "animation", "gemini", "veo", "runway", "kling", "open-source"]
dependencies = [
    "numpy>=2.0,<2.4",
]

[project.optional-dependencies]
image = ["Pillow>=10.0"]
vision = ["opencv-python-headless>=4.8", "pytesseract>=0.3", "numpy>=2.0"]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
lookbook = "lookbook.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lookbook*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
